manifests/consul/templates/connect-inject-service.yaml
---
# Source: consul/templates/connect-inject-service.yaml
# The service for the Connect sidecar injector
apiVersion: v1
kind: Service
metadata:
  name: consul-connect-injector-svc
  namespace: consul
  labels:
    app: consul
    chart: consul-helm
    heritage: Helm
    release: consul-oc
spec:
  ports:
  - port: 443
    targetPort: 8080
  selector:
    app: consul
    release: "consul-oc"
    component: connect-injector
