manifests/consul/templates/controller-mutatingwebhookconfiguration.yaml
---
# Source: consul/templates/controller-mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: consul-controller-mutating-webhook-configuration
  labels:
    app: consul
    chart: consul-helm
    heritage: Helm
    release: consul-oc
    component: controller
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: consul-controller-webhook
      namespace: consul
      path: /mutate-v1alpha1-proxydefaults
  failurePolicy: Fail
  admissionReviewVersions:
    - "v1beta1"
    - "v1"
  name: mutate-proxydefaults.consul.hashicorp.com
  rules:
    - apiGroups:
      - consul.hashicorp.com
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - proxydefaults
  sideEffects: None
- clientConfig:
    caBundle: Cg==
    service:
      name: consul-controller-webhook
      namespace: consul
      path: /mutate-v1alpha1-servicedefaults
  failurePolicy: Fail
  admissionReviewVersions:
    - "v1beta1"
    - "v1"
  name: mutate-servicedefaults.consul.hashicorp.com
  rules:
    - apiGroups:
      - consul.hashicorp.com
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - servicedefaults
  sideEffects: None
- clientConfig:
    caBundle: Cg==
    service:
      name: consul-controller-webhook
      namespace: consul
      path: /mutate-v1alpha1-serviceresolver
  failurePolicy: Fail
  admissionReviewVersions:
    - "v1beta1"
    - "v1"
  name: mutate-serviceresolver.consul.hashicorp.com
  rules:
    - apiGroups:
      - consul.hashicorp.com
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - serviceresolvers
  sideEffects: None
- clientConfig:
    caBundle: Cg==
    service:
      name: consul-controller-webhook
      namespace: consul
      path: /mutate-v1alpha1-servicerouter
  failurePolicy: Fail
  admissionReviewVersions:
    - "v1beta1"
    - "v1"
  name: mutate-servicerouter.consul.hashicorp.com
  rules:
    - apiGroups:
      - consul.hashicorp.com
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - servicerouters
  sideEffects: None
- clientConfig:
    caBundle: Cg==
    service:
      name: consul-controller-webhook
      namespace: consul
      path: /mutate-v1alpha1-servicesplitter
  failurePolicy: Fail
  admissionReviewVersions:
    - "v1beta1"
    - "v1"
  name: mutate-servicesplitter.consul.hashicorp.com
  rules:
    - apiGroups:
      - consul.hashicorp.com
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - servicesplitters
  sideEffects: None
- clientConfig:
    caBundle: Cg==
    service:
      name: consul-controller-webhook
      namespace: consul
      path: /mutate-v1alpha1-serviceintentions
  failurePolicy: Fail
  admissionReviewVersions:
    - "v1beta1"
    - "v1"
  name: mutate-serviceintentions.consul.hashicorp.com
  rules:
    - apiGroups:
      - consul.hashicorp.com
      apiVersions:
      - v1alpha1
      operations:
      - CREATE
      - UPDATE
      resources:
      - serviceintentions
  sideEffects: None
